--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/assets/*":["assets/*"],
+      // "@/layouts/*":["layouts/*"],
+      "@/utils/*":["utils/*"],
+      "@/styles/*":["styles/*"],
+     
+    },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
