--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie": "^1.2.3"
+    "react-lottie": "^1.2.3",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
