--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-lottie": "^1.2.3",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.6.3",
